--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,74 @@
 @import 'tailwindcss/dist/base.css';
 @import 'tailwindcss/dist/components.css';
 @import 'tailwindcss/dist/utilities.css';
+:root {
+    --green: #aed581;
+}
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    font-size: 62.5%;
+}
+
+.py-10 {
+    width: 100vw;
+    height: 100vh;
+}
+
+.text-center {
+    width: 100%;
+    height: 100%;
+}
+
+.leading-6 {
+    font-size: 2rem;
+    color: var(--green);
+}
+
+.leading-8 {
+    font-size: 4rem;
+    color: #54582f;
+    margin: 20px;
+}
+
+.leading-7 {
+    font-size: 1.6rem;
+}
+
+#app {
+    margin-top: 100px;
+    display: grid;
+    grid-template-columns:  repeat(auto-fit, minmax(280px, 1fr));
+    gap: 80px;
+}
+
+.card-container {
+    display: grid;
+    grid-template-columns:  1fr 1fr;
+    background-color: var(--green);
+    border: 2px solid var(--green);
+    border-radius: 10px 10px;
+    overflow: hidden;
+}
+
+.card-container:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.card-container div {
+    text-align: left;
+}
+
+.card-title {
+    font-size: 2rem;
+    font-weight: bold; /*Que la letra esté en negrita*/
+}
+
+.card-price {
+    font-size: 1.6rem;
+}
